# circ5th

./: CMakeLists.txt  Makefile  README.md  app
include/: CircleOfFifthsComponent.h  MainComponent.h
src/: CircleOfFifthsComponent.cpp  MainComponent.cpp  main.cpp
